Resources.css
:root {
  --light-purple: #BFA0EB;
  --medium-light-purple: #9754CB;
  --medium-dark-purple: #6237A0;
  --dark-purple: #28104E;
}

.hide-scroll::-webkit-scrollbar {
  display: none;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  background: var(--light-purple);
  font-family: "Oxygen", sans-serif;
}

#title {
  margin-left: 80px;
  font-size: 50px;
  margin-bottom: 0;
  margin-top: 20px;
}

#square-container {
  padding: 10px;
  display: flex;
  gap: 10px;
  overflow-x: hidden;
  flex-wrap: wrap;
  overflow-y: auto;
  margin: auto;
  max-width: 800px;
  max-height: 72vh;
  justify-content: center;
  margin-top: 0;
}

.resource {
  text-decoration: none;
}

.block {
  background-color: var(--medium-dark-purple);
  min-width: 250px;
  width: 250px;
  aspect-ratio: 1/1;
  border-radius: 40px;
  display: flex;
  flex-direction: column;
  border-style: solid;
  border-width: 3px;
  border-color: var(--medium-light-purple);
}

.block-header {
  padding-left: 20px;
  padding-right: 20px;
  color: yellow;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 0;
}

.block-content {
  color: white;
  padding-left: 15px;
  padding-right: 15px;
}

.block-content a {
   color: white;
}

.block-content a:hover {
  color: var(--light-purple);
}

#footer {
  display: flex;
  align-items: center;
  position: absolute;
  height: 50px;
  bottom: 0;
  background-color: white;
  width: 100%;
  justify-content: right;
}

#contact {
  margin-right: 30px;
}

